2017-05-03  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py: Add workaround for Koji inconsistency with proxyuser
	* src/utils.py: Add support for koji krb_rdns configuration

	* configure.ac: Release 0.206
	* NEWS: Update

2017-04-30  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/bridge.py: Typecast the koji rpm size info to int
	* src/client.py: Typecast the koji rpm size info to int

2017-04-11  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/bridge.py: Use requests instead of urlgrabber

2017-03-14  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Add version to generated container signatures

2017-03-02  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server_common.py: Allow certain states to be ignored in gpg_edit

	* src/server.py: Ignore KEYEXPIRED and SIGEXPIRED so we can unexpire

2017-02-28  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Implement change-key-expiration

	* src/server_common.py: Implement GPG key edit

	* src/bridge.py: Implement change-key-expiration

	* src/client.py: Implement change-key-expiration

	* configure.ac: Release 0.205
	* NEWS: Update.

2017-02-20  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/bind_methods.py: Added option for public-only PKCS11 tokens.

	* src/utils.py: Implement Either-Or binding.

	* configure.ac: Release 0.204
	* NEWS: Update.

	* src/bind_methods.py: Fixed bug with pkcs11 PIN reading.

2017-02-13  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* configure.ac: Release 0.203
	* NEWS: Update.

2016-12-03  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py: Added support for koji krb_login.

	* tests/containers.at: Skip test if we don't have skopeo.

2016-10-03  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Added gpg_signature for plain gpg signatures.

	* Server/Bridge/Client: Implemented Container signing, using skopeo
	scheme.

	* tests/bound-passphrase-tpm.at: Added test for TPM binding.

	* configure.ac: Release 0.202