@@ -1,3 +1,7 @@
+2017-05-04  Patrick Uiterwijk  <puiterwijk@redhat.com>
+
+	* src/utils.py: Remove workaround for koji inconsistency
+
 2017-05-03  Patrick Uiterwijk  <puiterwijk@redhat.com>
 
 	* src/utils.py: Add workaround for Koji inconsistency with proxyuser
